@@ -12,7 +12,6 @@ import org.springframework.stereotype.Controller;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Controller
@@ -29,7 +28,7 @@ public class Study {
 
 	@QueryMapping
 	public List<Document> studyN(DataFetchingEnvironment e){
-		return StreamSupport.stream(Mongo.find("Study", new Document(), Conversion.getProjection(e)).spliterator(), false).collect(Collectors.toList());
+		return StreamSupport.stream(Mongo.find("Study", new Document(), Conversion.getProjection(e)).spliterator(), false).toList();
 	}
 	
 	@MutationMapping
@@ -46,7 +45,8 @@ public class Study {
 			@Argument String value,
 			@Argument String normal,
 			@Argument String cube,
-			@Argument boolean active){
+			@Argument boolean active,
+			@Argument int reprocessDays){
 		return Mongo.insertOne("Study",
 				new Document("Name", name)
 				.append("Observed", observed)
@@ -61,6 +61,7 @@ public class Study {
 				.append("Normal", normal)
 				.append("Cube", cube)
 				.append("Active", active)
+				.append("ReprocessDays", reprocessDays)
 		).getInsertedId().asObjectId().getValue().toString();
 	}
 
@@ -79,7 +80,8 @@ public class Study {
 			@Argument String value,
 			@Argument String normal,
 			@Argument String cube,
-			@Argument boolean active){
+			@Argument boolean active,
+			@Argument int reprocessDays){
 		return Mongo.updateOne("Study", new Document("_id", new ObjectId(_id)), new Document("$set",
 				new Document("Name", name)
 				.append("Observed", observed)
@@ -93,7 +95,9 @@ public class Study {
 				.append("Value", value)
 				.append("Normal", normal)
 				.append("Cube", cube)
-				.append("Active", active))).getModifiedCount();
+				.append("Active", active)
+				.append("ReprocessDays", reprocessDays)
+		)).getModifiedCount();
 	}
 
 	@MutationMapping
